[gd_scene load_steps=7 format=2]

[ext_resource path="res://texture/world/possible_cells_set.png" type="Texture" id=1]
[ext_resource path="res://texture/world/missing_cell.png" type="Texture" id=2]
[ext_resource path="res://code/world_logic/lvl_generator_cave.gd" type="Script" id=3]
[ext_resource path="res://code/world_logic/Create_Rooms.gd" type="Script" id=4]

[sub_resource type="TileSet" id=1]
0/name = "missing_cell.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "possible_cells_set.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="tile_set" type="YSort"]
script = ExtResource( 3 )

[node name="floor" type="TileMap" parent="."]
format = 1

[node name="rooms" type="Node" parent="floor"]

[node name="wals" type="TileMap" parent="."]
format = 1

[node name="astar_nav_mesh" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1

[node name="possible_tiles" type="TileMap" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1

[node name="create_rooms" type="Node" parent="."]
script = ExtResource( 4 )

[connection signal="generation_complete" from="create_rooms" to="." method="_on_create_rooms_generation_complete"]
